--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
@@ -22,7 +24,11 @@
   "dependencies": {
     "@mikro-orm/cli": "^4.5.9",
     "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/postgresql": "^4.5.9"
+    "@mikro-orm/postgresql": "^4.5.9",
+    "argon2": "^0.28.2",
+    "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "mikro-orm": {
     "useTsNode": true,
