--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.9.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
@@ -32,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
+    "jsonwebtoken": "^8.5.1",
     "transliteration": "^2.2.0",
     "type-graphql": "^1.1.1",
     "uuidv4": "^6.2.12"
